--- a/test.html
+++ b/test.html
@@ -3,41 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apresentação de Integrantes</title>
-
-    <link rel="stylesheet" href="styles.css">
+    <title>informativo educação no campo</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <section class="main-content">
-        <div class="container">
-            <p>.</p>
-            <h2>Sobre Mim</h2>
-            <p>Coloque aqui uma breve descrição sobre você, seus interesses, objetivos acadêmicos, etc.</p>
-            <h2>Skills</h2>
+    <header>
+        <nav>
             <ul>
-                <li>Linguagens de Programação</li>
-                <li>Ferramentas e Tecnologias</li>
-                <li>Habilidades Interpessoais</li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="test.html">integrantes</a></li>
+                <li><a href="contato.html">alunos</a></li>
+                <li><a href="curiosidades.html">curiosidades</a></li>
             </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="destaque"></section>
+        <header>
+            <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
+            <p>.</p>
+            <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO? hahaha<p>
+         </header>
+        
+        <div class="carousel">
+            <div class="carousel-inner">
+                <div class="slide">
+                    <img src="./img/criança no sol.jpg" alt="Imagem 1">
+                </div>
+                <div class="slide">
+                    <img src="img/imagem ed. no campo.jpg" alt="Imagem 2">
+                </div>
+                <div class="slide">
+                    <img src="./img/escola no campo.jpg" alt="Imagem 3">
+                </div>
+            </div>
+
+        
+        <script src="./js/movimento.js"></script>
+        <section id="cursos">
+            <br>
+            <h4>introdução</h4>
+            <br>
+        </section>
         </div>
-    </section>
+    </main>
+<head>
+
+
 </body>
 </html>
 
-    <h1>INTEGRANTES DO GRUPO </h1>
-    <P>.</P>
-    <h3>quem somos nós?</h3>
-
-    <ul>
-        <li class="integrante">
-            <h2>Djovana Silveira</h2>
-            <p>16 anos, adora amarelo e pretende cursar odontologia </p>
-        </li>
-        <li class="integrante">
-            <h2>João Nascimento</h2>
-            <p>17 anos, joga volei e pretende cursar arquitetura </p>
-        </li>
-        <!-- Adicione mais itens conforme necessário -->
-    </ul>
-</body>
-</html>
+</head>
