--- a/test.html
+++ b/test.html
@@ -27,11 +27,10 @@
             <p> VOCÊ SABE QUEM SOMOS NÓS?<p>
          </header>
         
-        <div class="imagem"
-        <img src="./img/Colegio-Estadual-do-Parana"
-            <div class=""
-                </div>
-            </div>
+         <body>
+            <h1>Minha Imagem</h1>
+            <img src="img/Colegio-Estadual-do-Parana.jpg" alt="CEP">
+        </body>
 
         
         <script src="./js/movimento.js"></script>
