--- a/test.html
+++ b/test.html
@@ -30,7 +30,12 @@
          <body>
             <img src="img/Colegio-Estadual-do-Parana.jpg" alt="CEP">
         </body>
-
+        <head>
+            <title>Diminuir Imagem com CSS</title>
+            <link rel="stylesheet" href="styles.css">
+        </head>
+        
+        </body>
         
         <script src="./js/movimento.js"></script>
         <section id="cursos">
