--- a/test.html
+++ b/test.html
@@ -28,10 +28,12 @@
          </header>
          <head>
             <title>Diminuir Imagem com CSS</title>
+            <title>Ajustar Formato da Imagem</title>
             <link rel="stylesheet" href="styles.css">
         </head>
         <body>
             <img src="img/Colegio-Estadual-do-Parana.jpg" alt="CEP" class="imagem-diminuida">
+            <img src="img/Colegio-Estadual-do-Parana.jpg" alt="CEP class="imagem-ajustada">
         </body>
         </html>
         
