--- a/test.html
+++ b/test.html
@@ -32,9 +32,8 @@
             <link rel="stylesheet" href="styles.css">
         </head>
         <body>
-
-            <img src="img/Colegio-Estadual-do-Parana.jpg" alt="CEP class="imagem-ajustada">
-        </body>
+            <img src="img/Colegio-Estadual-do-Parana.jpg" alt="CEP" class="imagem-diminuida">
+         
         </html>
         
         <script src="./js/movimento.js"></script>
