--- a/test.html
+++ b/test.html
@@ -33,7 +33,8 @@
         </head>
         <body>
             <img src="img/Colegio-Estadual-do-Parana.jpg" alt="CEP" class="imagem-diminuida">
-         
+            <img src="img/Colegio-Estadual-do-Parana.jpg" alt="CEP class="imagem-ajustada">
+        </body>
         </html>
         
         <script src="./js/movimento.js"></script>
