--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
          </header>
          <head>
             <title>Diminuir Imagem com CSS</title>
-            <title>Ajustar Formato da Imagem</title>
+            <title>Ajustar Formato da Imagem com CSS</title>
             <link rel="stylesheet" href="styles.css">
         </head>
         <body>
