--- a/test.html
+++ b/test.html
@@ -28,13 +28,13 @@
          </header>
          <head>
             <title>Diminuir Imagem com CSS</title>
-            <title>Ajustar Formato da Imagem com CSS</title>
-            <link rel="stylesheet" href="styles.css">
-        </head>
-        <body>
-         
-            <img src="img/Colegio-Estadual-do-Parana.jpg" alt="CEP class="imagem-ajustada">
-        </body>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <h1>Imagem Redimensionada</h1>
+    <div class="imagem-wrapper">
+        <img src="caminho/para/sua/imagem.jpg" alt="Descrição da Imagem">
+    </div>
         </html>
         
         <script src="./js/movimento.js"></script>
