--- a/test.html
+++ b/test.html
@@ -27,16 +27,15 @@
             <p> VOCÊ SABE QUEM SOMOS NÓS?<p>
          </header>
          <head>
-            <title>Diminuir Imagem com CSS</title>
-    <link rel="stylesheet" href="styles.css">
+
+        <title>Diminuir Imagem com CSS</title>
+     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Imagem Redimensionada</h1>
     <div class="imagem-wrapper">
-        <img src="caminho/para/sua/imagem.jpg" alt="Descrição da Imagem">
+        <img src="img/Colegio-Estadual-do-Parana.jpg" alt="cep">
     </div>
-        </html>
-        
         <script src="./js/movimento.js"></script>
         <section id="cursos">
             <br>
@@ -44,12 +43,5 @@
             <br>
         </section>
     </body>
-      
-    </main>
-<head>
 
-
-</body>
 </html>
-
-</head>
