--- a/test.html
+++ b/test.html
@@ -39,8 +39,8 @@
         <link rel="stylesheet" href="styles.css">
    </head>
    <body>
-       <h1>Imagem Redimensionada</h1>
-       <div class="imagem-wrapper">
+       <h1>Imagem ajustada</h1>
+       <div class="imagem-ajustada">
            <img src="img/Colegio-Estadual-do-Parana.jpg" alt="cep">
        </div>
     </body>
