--- a/test.html
+++ b/test.html
@@ -25,10 +25,9 @@
             <h1>INTEGRANTES DA EQUIPE</h1>
             <p>.</p>
             <p> VOCÊ SABE QUEM SOMOS NÓS?<p>
+            </main>
          </header>
          <head>
-
-       
         <script src="./js/movimento.js"></script>
         <section id="cursos">
             <br>
