--- a/test.html
+++ b/test.html
@@ -25,7 +25,7 @@
                 <br>
             </section>
             <title>Diminuir Imagem com CSS</title>
-            <link rel="stylesheet" href="styles.css">
+            <link rel="stylesheet" href="style.css">
        </head>
     </header>
 
@@ -35,7 +35,7 @@
             <h1>INTEGRANTES DA EQUIPE</h1>
             <p>.</p>
             <p> VOCÊ SABE QUEM SOMOS NÓS?<p>
-            </main>
+    </main>
          </header>
          
    <body>
