--- a/test.html
+++ b/test.html
@@ -13,8 +13,9 @@
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="test.html">integrantes</a></li>
-                <li><a href="contato.html">alunos</a></li>
+                <li><a href="contato.html">objetivos</a></li>
                 <li><a href="curiosidades.html">curiosidades</a></li>
+                <li><a href="curiosidades.html">comparativo</a></li>
             </ul>
         </nav>
         <head>
