--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="integrantes.html">integrantes</a></li>
-                <li><a href="contato.html">alunos</a></li>
+                <li><a href="contato.html">objetivos</a></li>
                 <li><a href="curiosidades.html">curiosidades</a></li>
             </ul>
         </nav>
