--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="integrantes.html">integrantes</a></li>
                 <li><a href="contato.html">objetivos</a></li>
                 <li><a href="curiosidades.html">curiosidades</a></li>
+                <li><a href="curiosidades.html">comparativo</a></li>
             </ul>
         </nav>
     </header>
