--- a/integrantes.html
+++ b/integrantes.html
@@ -11,7 +11,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="test.html">integrantes</a></li>
+                <li><a href="integrantes.html">integrantes</a></li>
+
             </ul>
         </nav>
         <head>
