--- a/integrantes.html
+++ b/integrantes.html
@@ -14,7 +14,7 @@
                 <li><a href="integrantes.html">integrantes</a></li>
             </ul>
         </nav>
-        
+
         <head>
             <script src="./js/movimento.js"></script>
             <section id="cursos">
@@ -30,7 +30,7 @@
         
         <section id="destaque"></section>
         <header>
-            <h1>INTEGRANTES DA EQUIPE</h1>
+            <h1>INTEGRANTES DA EQUIPEkkkk</h1>
             <p>.</p>
             <p> VOCÊ SABE QUEM SOMOS NÓS?<p>
     </main>
