--- a/integrantes.html
+++ b/integrantes.html
@@ -32,7 +32,7 @@
         <header>
             <h1>INTEGRANTES DA EQUIPEkkkk</h1>
             <p>.</p>
-            <p> VOCÊ SABE QUEM SOMOS NÓS?<p>
+            <p> VOCÊ SABE QUEM SOMOS NÓS? voce sabe<p>
     </main>
          </header>
         
