--- a/integrantes.html
+++ b/integrantes.html
@@ -27,7 +27,7 @@
         
         <section id="destaque"></section>
         <header>
-            <h1>INTEGRANTES DA EQUIPEkkkk</h1>
+            <h1>INTEGRANTES DA EQUIPEkkkk123</h1>
             <p>.</p>
             <p> VOCÊ SABE QUEM SOMOS NÓS? voce sabe<p>
          </header>
