--- a/js/index.html
+++ b/js/index.html
@@ -1,59 +1,58 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>informativo educação no campo</title>
-<link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anta&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <title>projetos djj</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=7">
+    <link rel="stylesheet" href="style.css">
 </head>
-
-
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="integrantes.html">integrantes</a></li>
-            </ul>
-        </nav>
-    </header>
+    <h3>Djovana</h3>
+    <h3>João N</h3>
+    <h3>Júlia M</h3>
+    <img class="foto" src="./golfinho djj.jpg" alt="dolfin">
+    <button class="oi" onclick="alert('oi')">Diga oi</button>
+    <h2> Prazer em te ver por aqui colega, <span>Você gosta de golfinho?</span></h2>
 
 
-    <main>
-        <section id="destaque"></section>
-        <header>
-            <h1>INFORMATIVO EDUCAÇÃO NO CAMPO</h1>
-            <p>.</p>
-            <p> VOCÊ SABE COMO FUNCIONA A EDUCAÇÃO NO CAMPO? hahaha123<p>
-         </header>
-       
-        <div class="carousel">
-            <div class="carousel-inner">
-                <div class="slide">
-                    <img src="./img/criança no sol.jpg" alt="Imagem 1">
-                </div>
-                <div class="slide">
-                    <img src="img/imagem ed. no campo.jpg" alt="Imagem 2">
-                </div>
-                <div class="slide">
-                    <img src="./img/escola no campo.jpg" alt="Imagem 3">
-                </div>
+<a href="./jogo.js">Arquivo do jogo</a>
+<a href="./main.js">Arquivo do nome</a>
+
+
+<section class="contagem-regressiva">
+    <button class="objetivos ativo">Objetivo Djovana: passar no vestibular em odontologia até janeiro e 2025</button>
+    <button class="objetivos">Objetivo João: passar no vestibular em arquitetura até janeiro de 2025</button>
+    <button class="objetivos">Objetivo Júlia: passar no vestibular em biomedicina até janeiro de 2025</button>
+    <button class="objetivos">Formatura em fevereiro de 2025</button>
+    <div>
+        <div class="aba-conteudo ativa"> 
+            <h3>SE ESFORÇAR</h3>
+            <h2>Tempo para completar o objetivo:</h2> 
+            <div class="contador"></div>
+        </div>
+        <div class="aba-conteudo">
+                <h3>SE DEDICAR E APRENDER</h3>
+                <h2>Tempo para completar o objetivo:</h2>
+                <div class="contador"></div>
             </div>
+            <div class="aba-conteudo">
+                <h3>SE EMPENHAR</h3>
+                <h2>Tempo para completar o objetivo:</h2>
+                <div class="contador"></div>
+            </div>
+            <div class="aba-conteudo">
+                <h3>FIMMM</h3>
+                <h2>Tempo para completar o objetivo:</h2>
+                <div class="contador"></div>
+            </div>
+    </div>
+</section>
 
-
-       
-        <script src="./js/movimento.js"></script>
-        <section id="cursos">
-            <br>
-            <h4>introdução</h4>
-            <br>
-        </section>
-           </div>
-    </main>
+<script src="./cont.js"></script>
 </body>
 </html>
-
-
-</head>
-
-
